--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -1,12 +1,14 @@
 ---
 - name: Install nginx
   apt: name=nginx state=present
-  sudo: true
+  become: true
+  become_method: sudo
   tags: install
 
 - name: Remove the default config
   file: state=absent path=/etc/nginx/sites-enabled/default
-  sudo: true
+  become: true
+  become_method: sudo
   ignore_errors: true
   tags: install
 
@@ -17,29 +19,34 @@
 
 - name: Copy the SSL Certificate
   copy: src=../templates/server.crt dest=/etc/nginx/server.crt
-  sudo: true
+  become: true
+  become_method: sudo
   tags: install
   when: cert.stat.exists == true
 
 - name: Copy the SSL Key
   copy: src=../templates/server.key dest=/etc/nginx/server.key
-  sudo: true
+  become: true
+  become_method: sudo
   tags: install
   when: cert.stat.exists == true
 
 - name: Configure for DHE parameters
   command: openssl dhparam -out /etc/ssl/certs/dhparam.pem 2048
-  sudo: true
+  become: true
+  become_method: sudo
   ignore_errors: true
   tags: install
 
 - name: Copy nginx configuration
   template: src=pari.conf dest=/etc/nginx/sites-enabled/pari.conf
-  sudo: true
+  become: true
+  become_method: sudo
   ignore_errors: true
   tags: install
 
 - name: Restart nginx
   service: name=nginx state=restarted
-  sudo: true
+  become: true
+  become_method: sudo
   tags: install
